<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:theme="@style/Presentation.Theme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:navigationIcon="@drawable/core_presentation_vector_drawable_arrow_left"
            app:popupTheme="@style/Presentation.Theme.PopupOverlay"
            app:title="@string/fragment_feature_user_settings_details_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <uz.uzkassa.smartpos.core.presentation.widget.statelayout.StateLayout
        android:id="@+id/state_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.core.widget.NestedScrollView
            style="@style/Presentation.Widget.NestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/_22sdp"
                    android:paddingTop="@dimen/_22sdp"
                    android:paddingEnd="@dimen/_22sdp"
                    android:paddingBottom="@dimen/_8sdp">

                    <uz.uzkassa.smartpos.core.presentation.widget.materialtextfiled.MaterialTextField
                        android:id="@+id/user_surname_material_text_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fragment_feature_user_settings_common_surname_hint"
                        app:boxBackgroundColor="@android:color/transparent"
                        app:boxStrokeColor="@android:color/transparent" />

                    <uz.uzkassa.smartpos.core.presentation.widget.materialtextfiled.MaterialTextField
                        android:id="@+id/user_name_material_text_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fragment_feature_user_settings_common_name_hint" />

                    <uz.uzkassa.smartpos.core.presentation.widget.materialtextfiled.MaterialTextField
                        android:id="@+id/user_last_name_material_text_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fragment_feature_user_settings_common_last_name_hint"
                        app:boxBackgroundColor="@android:color/transparent"
                        app:boxStrokeColor="@android:color/transparent" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/user_change_personal_data_button"
                        style="@style/Presentation.Widget.Button.TextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_feature_user_settings_details_user_change_personal_data_button_title" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@android:color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/_22sdp"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_22sdp"
                    android:paddingBottom="@dimen/_8sdp">

                    <uz.uzkassa.smartpos.core.presentation.widget.materialtextfiled.MaterialTextField
                        android:id="@+id/user_phone_number_material_text_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fragment_feature_user_settings_common_phone_number_hint" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/user_change_phone_number_button"
                        style="@style/Presentation.Widget.Button.TextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_feature_user_settings_details_user_change_phone_number_button_title" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/user_change_password_button"
                        style="@style/Presentation.Widget.Button.TextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_feature_user_settings_details_user_change_password_button_title" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/user_change_language_button"
                        style="@style/Presentation.Widget.Button.TextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_feature_user_settings_details_user_change_language_button_title" />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </uz.uzkassa.smartpos.core.presentation.widget.statelayout.StateLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>